--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="src/styles.css" />
+   
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+
     <script
       src="https://kit.fontawesome.com/ddc3ee268a.js"
       crossorigin="anonymous"
@@ -20,20 +21,77 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />  
-    <script
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Croissant+One&family=Libre+Baskerville&family=Lilita+One&family=Lugrasimo&family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Tilt+Prism&family=VT323&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Caveat&family=Croissant+One&family=Libre+Baskerville&family=Lilita+One&family=Lugrasimo&family=Merriweather:wght@300;400;700;900&family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&family=Tilt+Prism&family=VT323&display=swap" rel="stylesheet">
+<script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="src/styles.css" />
   
  
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>Hi there</p>
-      <i class="fab fa-instagram"></i>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-to ps-5">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#" title="Aneesha Rangan"><img src="images/Aneesha.png" alt="logo" class="logo img-fluid me-3">Aneesha Rangan</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#" title="Home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" title="About">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" title="Skills">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" title="Education">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" title="Work">Work</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" title="Experience">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#" title="Contact">Contact</a>
+            </li>
+           
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <section class="head">
+      <div class="container-fluid">
+        <div class="row">
+        <div class="col-sm-5 main-description">
+          <hr>
+          <h2>Hi There,</h2>
+          <h1>I'm Aneesha <span>Rangan</span></h1>
+          <p class="mb-5">Front-end developer based in Gauteng, South Africa</p>
+          <a href="#" class="btn btn-branding">About Me</a>
+          <hr>
+        </div>
+
+        <div class="col-sm-6">
+          <img src="images/AneeshaR.jpg" alt="image of Aneesha" class="profile-image img-fluid">
+          <br>
+          <br>
+          <br>
+        </div>
+      </div>
     </div>
+  </section>
   </body>
 </html>
