--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           <hr>
           <h2>Hi There,</h2>
           <h1>I'm Aneesha <span>Rangan</span></h1>
-          <p class="mb-5">Front-end developer based in Gauteng, South Africa</p>
+          <p class="hero-paragraph mb-5">Front-end developer based in Gauteng, South Africa</p>
           <a href="#" class="btn btn-branding">About Me</a>
           <hr>
         </div>
@@ -93,5 +93,21 @@
       </div>
     </div>
   </section>
+  <section class="body">
+    <p class="text-center mt-5 mb-5">Featured Projects, which are some of my best work</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col-6 d-none d-lg-block image">
+          <img src="images/Kali.png" alt="Kali project" title="Kali Project" class="kali-image img-fluid rounded">
+        </div>
+        <div class="col-sm-6">
+          <h2 class="text-center mb-5 ">The Devine Mother Kali Project</h2>
+          <p class="mb-4 text-muted">"Kali or Kalika is a major Hindu goddess associated with time, change, creation, power, destruction and death in Shaktism. Kali is the first of the ten Mahavidyas in the Hindu tantric tradition. Kali's earliest appearance is when she emerged from Durga."</p>
+          <a href="#" class="btn btn-branding">Launch Kali App</a>
+        </div>
+      </div>
+    </div>
+  </section>
+
   </body>
 </html>
