Added the second project section to the portfolio

--- a/index.html
+++ b/index.html
@@ -94,20 +94,34 @@
     </div>
   </section>
   <section class="body">
-    <p class="text-center mt-5 mb-5">Featured Projects, which are some of my best work</p>
+    <p class="text-center mt-5 mb-5 feature-paragraph">Featured Projects, which are some of my best work</p>
     <div class="container">
       <div class="row mb-5">
-        <div class="col-6 d-none d-lg-block image">
-          <img src="images/Kali.png" alt="Kali project" title="Kali Project" class="kali-image img-fluid rounded">
+        <div class="col-sm-6 image d-none d-sm-block">
+          <img src="images/Kali.png" alt="Kali project" title="Kali Project" class="kali-image img-fluid rounded d-none d-sm-block">
         </div>
         <div class="col-sm-6">
           <h2 class="text-center mb-5 ">The Devine Mother Kali Project</h2>
-          <p class="mb-4 text-muted">"Kali or Kalika is a major Hindu goddess associated with time, change, creation, power, destruction and death in Shaktism. Kali is the first of the ten Mahavidyas in the Hindu tantric tradition. Kali's earliest appearance is when she emerged from Durga."</p>
-          <a href="#" class="btn btn-branding">Launch Kali App</a>
+          <p class="mb-4 text-muted description">During my SheCodes Basic course, I embarked on a creative journey to honor Kali, a prominent Hindu goddess embodying themes of time, change, creation, power, destruction, and death in the realm of Shaktism. Beginning with a simple HTML template, this project underwent a remarkable evolution through CSS styling and the incorporation of JavaScript functionality. It stands as a testament to my progress in web development, showcasing my capacity to transform a concept into a dynamic digital creation. This project not only pays homage to Kali but also demonstrates my ability to craft engaging and interactive web content, marking a significant milestone in my coding journey.
+          </p>
+          <a href="#" class="btn primary-link project-link">Launch Kali App</a>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row mt-5 mb-5">
+        <div class="col-sm-6">
+          <h2 class="text-center mb-5 ">Weather App Project</h2>
+          <p class="mb-4 text-muted description">During my participation in the intensive 8-week SheCodes Plus program, I created a JavaScript weather application, marking a significant milestone in my coding journey. I developed a versatile skill set, including expertise in Bootstrap for responsive UI design, real-time data integration using APIs, web hosting, GitHub for version control, and proficiency in advanced JavaScript (ES6). This project exemplifies my dedication to web development and continuous improvement, serving as my inaugural interactive endeavor, showcasing both technical prowess and a commitment to learning and growth.</p>
+          <a href="#" class="btn primary-link project-link">Launch Weather App</a>
+        </div>
+        <div class="col-sm-6 image d-none d-sm-block ">
+          <img src="images/weather.png" alt="Weather project" title="Weather Project" class="weather-image img-fluid rounded d-none d-sm-block">
         </div>
       </div>
     </div>
   </section>
+  
 
   </body>
 </html>
