Updated heading button style

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h2>Hi There,</h2>
           <h1>I'm Aneesha <span>Rangan</span></h1>
           <p class="hero-paragraph mb-5">Front-end developer based in Gauteng, South Africa</p>
-          <a href="#" class="btn btn-branding">About Me</a>
+          <a href="#" class="btn primary-link">About Me</a>
           <hr>
         </div>
 
