--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-to ps-5">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#" title="Aneesha Rangan"><img src="images/Aneesha.png" alt="logo" class="logo img-fluid me-3">Aneesha Rangan</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
