--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
+          <ul class="navbar-nav text-end">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="#" title="Home">Home</a>
             </li>
