--- a/about.html
+++ b/about.html
@@ -71,9 +71,24 @@
           </div>
         </div>
       </nav>
-    <h1>Hello, I am Aneesha Ashwari Rangan</h1>
-    <h2>Frontend Developer, based in Gauteng, South Africa.</h2>
-    <p></p>
-    <a href="#">View my projects</a>
+      <div class="about-section container">
+        <div class="row">
+          <div class="col-lg-6">
+            <div class="about-section-content">
+            <h1 class="header mb-4">Hello, I am Aneesha Ashwari Rangan</h1>
+            <h2 class="header-h2 mb-4">Frontend Developer, based in Gauteng, South Africa.</h2>
+            <p class="body-paragraph mb-5">Competent Front-End Developer that is passionate about crafting seamless user experiences and eager to contribute creative solutions and technical expertise to dynamic web development projects. Well versed in 
+              HTML5, CSS3, and JavaScript ES6 and equipped in hands-on experience in Java and Android development. Results driven and possess extensive knowledge in collaborating within cross-functional teams to drive project success, complex program management and product development experience to support IT operations.
+              
+              Actively exploring opportunities on Udemy and honored to be selected for the SheCodes Foundation scholarship, supporting South African women in coding. Highly structured, knowledgeable in developing applications, database and cloud computing solutions. Possess a proven track record in troubleshooting and debugging capabilities for resolving complex technical issues. Meticulously apply time management and professionalism to meet/exceed the company’s expectations. Keen for an opportunity to contribute to the company’s success and increase productivity.
+              </p>
+            <a href="#" class="btn primary-link project-link mb-5">View my projects</a>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <img src="images/AneeshaR.jpg" alt="Aneesha profile image" class="portfolio-image img-fluid">
+        </div>
+      </div>
+    </div>
 </body>
 </html>
