--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
               <a class="nav-link active" aria-current="page" href="#" title="Home">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" title="About">About</a>
+              <a class="nav-link" href="about.html" title="About">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" title="Skills">Skills</a>
@@ -85,7 +85,7 @@
         </div>
 
         <div class="col-sm-6">
-          <img src="images/AneeshaR.jpg" alt="image of Aneesha" class="profile-image img-fluid">
+          <img src="images/Aneesha_1.png" alt="Avatar image of Aneesha" class="avatar-image img-fluid">
           <br>
           <br>
           <br>
