--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav text-end">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#" title="Home">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html" title="Home">Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="about.html" title="About">About</a>
@@ -80,7 +80,7 @@
           <h2>Hi There,</h2>
           <h1>I'm Aneesha <span>Rangan</span></h1>
           <p class="hero-paragraph mb-5">Front-end developer based in Gauteng, South Africa</p>
-          <a href="#" class="btn primary-link">About Me</a>
+          <a href="about.html" class="btn primary-link">About Me</a>
           <hr>
         </div>
 
