Added the link to the navbar on the about page

--- a/about.html
+++ b/about.html
@@ -46,10 +46,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav text-end">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#" title="Home">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#" title="About">About</a>
+                <a class="nav-link active" href="about.html" title="About">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" title="Skills">Skills</a>
