--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <a class="nav-link" href="#" title="Education">Education</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" title="Work">Work</a>
+              <a class="nav-link" href="work.html" title="Work">Work</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#" title="Experience">Experience</a>
@@ -102,7 +102,7 @@
         </div>
         <div class="col-sm-6">
           <h2 class="text-center mb-5 ">The Devine Mother Kali Project</h2>
-          <p class="mb-4 text-center description">During my SheCodes Basic course, I embarked on a creative journey to honor Kali, a prominent Hindu goddess embodying themes of time, change, creation, power, destruction, and death in the realm of Shaktism. Beginning with a simple HTML template, this project underwent a remarkable evolution through CSS styling and the incorporation of JavaScript functionality. It stands as a testament to my progress in web development, showcasing my capacity to transform a concept into a dynamic digital creation. This project not only pays homage to Kali but also demonstrates my ability to craft engaging and interactive web content, marking a significant milestone in my coding journey.
+          <p class="mb-4 text-center description">During my SheCodes Basic course, I embarked on a creative journey to honor Kali, a prominent Hindu goddess embodying themes of time, change, creation, power, destruction, and death in the realm of Shaktism. Beginning with a simple HTML template, this project underwent a remarkable evolution through CSS styling. It stands as a testament to my progress in web development, showcasing my capacity to transform a concept into a dynamic digital creation. This project not only pays homage to Kali but also demonstrates my ability to craft engaging and interactive web content, marking a significant milestone in my coding journey.
           </p>
           <a href="#" class="btn primary-link project-link">Launch Kali App</a>
         </div>
@@ -113,7 +113,7 @@
         <div class="col-sm-6">
           <h2 class="text-center mb-5 ">Weather App Project</h2>
           <p class="mb-4 text-center description">During my participation in the intensive 8-week SheCodes Plus program, I created a JavaScript weather application, marking a significant milestone in my coding journey. I developed a versatile skill set, including expertise in Bootstrap for responsive UI design, real-time data integration using APIs, web hosting, GitHub for version control, and proficiency in advanced JavaScript (ES6). This project exemplifies my dedication to web development and continuous improvement, serving as my inaugural interactive endeavor, showcasing both technical prowess and a commitment to learning and growth.</p>
-          <a href="#" class="btn primary-link project-link">Launch Weather App</a>
+          <a href="https://tangerine-frangollo-9aa572.netlify.app/" target="_blank" class="btn primary-link project-link">Launch Weather App</a>
         </div>
         <div class="col-sm-6 image d-none d-sm-block ">
           <img src="images/weather.png" alt="Weather project" title="Weather Project" class="weather-image img-fluid rounded d-none d-sm-block">
