--- a/work.html
+++ b/work.html
@@ -49,7 +49,7 @@
                 <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="about.html" title="About">About</a>
+                <a class="nav-link" href="about.html" title="About">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" title="Skills">Skills</a>
@@ -58,7 +58,7 @@
                 <a class="nav-link" href="#" title="Education">Education</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="work.html" title="Work">Work</a>
+                <a class="nav-link active" href="work.html" title="Work">Work</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#" title="Experience">Experience</a>
@@ -72,23 +72,25 @@
         </div>
       </nav>
       <div class="content-container container">
-        <div class="row">
-          <div class="col-lg-6">
-            <div class="content">
-            <h1 class="header mb-4">Hello, I am Aneesha Ashwari Rangan</h1>
-            <h2 class="header-h2 mb-4">Frontend Developer, based in Gauteng, South Africa.</h2>
-            <p class="body-paragraph mb-5">Competent Front-End Developer that is passionate about crafting seamless user experiences and eager to contribute creative solutions and technical expertise to dynamic web development projects. Well versed in 
-              HTML5, CSS3, and JavaScript ES6 and equipped in hands-on experience in Java and Android development. Results driven and possess extensive knowledge in collaborating within cross-functional teams to drive project success, complex program management and product development experience to support IT operations.
-              
-              Actively exploring opportunities on Udemy and honored to be selected for the SheCodes Foundation scholarship, supporting South African women in coding. Highly structured, knowledgeable in developing applications, database and cloud computing solutions. Possess a proven track record in troubleshooting and debugging capabilities for resolving complex technical issues. Meticulously apply time management and professionalism to meet/exceed the company’s expectations. Keen for an opportunity to contribute to the company’s success and increase productivity.
-              </p>
-            <a href="#" class="btn primary-link project-link mb-5">View my projects</a>
-          </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="images/AneeshaR.jpg" alt="Aneesha profile image" class="portfolio-image img-fluid">
+        <div class="content">
+            <h1 class="mb-5 text-center">Take a look at what I have been working on!</h1>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <div class="image">
+                    <img src="images/Kali.png" alt="Kali project" class="img-fluid mb-3 rounded kali-image">
+                </div>
+                    <h3 class="text-center m-0">Devine Mother Kali Project</h3>
+                    <p class="text-center text-muted">Built with HTML and CSS </p>
+                </div>
+                <div class="col-md-6 mb-4">
+                    <div class="image">
+                    <img src="images/Weather.png" alt="Weather project" class="img-fluid mb-3 rounded weather-image weather mt-4">
+                </div>
+                    <h3 class="text-center m-0">Weather Project</h3>
+                    <p class="text-center text-muted">Built with HTML, CSS, JavaScript and the weather API was intergrated into the project aswell</p>
+                </div>
+            </div>
         </div>
       </div>
-    </div>
 </body>
 </html>
