--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
           <h2 class="text-center mb-5 ">The Devine Mother Kali Project</h2>
           <p class="mb-4 text-center description">During my SheCodes Basic course, I embarked on a creative journey to honor Kali, a prominent Hindu goddess embodying themes of time, change, creation, power, destruction, and death in the realm of Shaktism. Beginning with a simple HTML template, this project underwent a remarkable evolution through CSS styling. It stands as a testament to my progress in web development, showcasing my capacity to transform a concept into a dynamic digital creation. This project not only pays homage to Kali but also demonstrates my ability to craft engaging and interactive web content, marking a significant milestone in my coding journey.
           </p>
-          <a href="#" class="btn primary-link project-link">Launch Kali App</a>
+          <a href="https://www.shecodes.io/workshops/shecodes-plus-d1974db7-4fbd-4ad1-addd-0c6cbd649900/projects/1866258" target="_blank" class="btn primary-link project-link">Launch Kali App</a>
         </div>
       </div>
     </div>
