--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               <a class="nav-link" href="#" title="Experience">Experience</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#" title="Contact">Contact</a>
+              <a class="nav-link" href="contact.html" title="Contact">Contact</a>
             </li>
            
           </ul>
