--- a/work.html
+++ b/work.html
@@ -37,14 +37,14 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light d-flex navbar-fixed-top ">
         <div class="container-fluid">
           <a class="navbar-brand" href="#" title="Aneesha Rangan"><img src="images/Aneesha.png" alt="logo" class="logo img-fluid me-3">Aneesha Rangan</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav text-end">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="navbar-nav">
               <li class="nav-item">
                 <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
               </li>
