--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
       integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+    <script src="https://kit.fontawesome.com/89d16f72ba.js" crossorigin="anonymous"></script>
 
-    <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
-      crossorigin="anonymous"
-    ></script>
+  
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
@@ -112,6 +110,32 @@
       </div>
     </div>
   </section>
+
+  <footer>
+    <div class=" container contact-box  justify-content-between mb-5 d-none d-md-flex">
+      <div>
+        <h4>Work Inquiry</h4>
+        <p class="text-muted">Lets work together</p>
+      </div>
+      <div>
+        <a href="contact.html" class="btn primary-link"> Contact me</a>
+      </div>
+    </div>
+    <div class="d-flex justify-content-center mb-5"> 
+      <a href="mailto:aneeshrangan51@gmail.com" class="email-link">aneeshrangan51@gmail.com</a>
+    </div>
+    <div class="social-links d-flex justify-content-center">
+      <a href="https://github.com/Aneesha51" target="_blank"><i class="fa-brands fa-github fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true">
+    </i>
+  </a>
+  <a href="https://www.instagram.com/aneesharangan" target="_blank"><i class="fa-brands fa-instagram fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true">
+  </i>
+</a>
+<a href="https://www.twitter.com/AneeshaRangan" target="_blank"><i class="fa-brands fa-twitter fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true">
+</i>
+</a>
+    </div>
+  </footer>
   
 
   </body>
