Updated the SEO of the website

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="About Aneesha. Aneesha is a front-end engineer based in South Africa, Gauteng.">
    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -31,7 +32,7 @@
     ></script>
     <link rel="stylesheet" href="src/styles.css" />
   
-    <title>Document</title>
+    <title>About Aneesha - Aneesha Rangan</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
@@ -43,16 +44,16 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav text-end">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="index.html" title="Home">Home</a>
+                <a class="nav-link" aria-current="page" href="index.html" title="Homepage">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="about.html" title="About">About</a>
+                <a class="nav-link active" href="about.html" title="About Aneesha">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="work.html" title="Work">Work</a>
+                <a class="nav-link" href="work.html" title="Aneesha's Work">Work</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html" title="Contact">Contact</a>
+                <a class="nav-link" href="contact.html" title="Contact Aneesha">Contact</a>
               </li>
              
             </ul>
@@ -67,14 +68,13 @@
             <h2 class="header-h2 mb-4">Frontend Developer, based in Gauteng, South Africa.</h2>
             <p class="body-paragraph mb-5">Competent Front-End Developer that is passionate about crafting seamless user experiences and eager to contribute creative solutions and technical expertise to dynamic web development projects. Well versed in 
               HTML5, CSS3, and JavaScript ES6 and equipped in hands-on experience in Java and Android development. Results driven and possess extensive knowledge in collaborating within cross-functional teams to drive project success, complex program management and product development experience to support IT operations.
-              
               Actively exploring opportunities on Udemy and honored to be selected for the SheCodes Foundation scholarship, supporting South African women in coding. Highly structured, knowledgeable in developing applications, database and cloud computing solutions. Possess a proven track record in troubleshooting and debugging capabilities for resolving complex technical issues. Meticulously apply time management and professionalism to meet/exceed the company’s expectations. Keen for an opportunity to contribute to the company’s success and increase productivity.
               </p>
-            <a href="#" class="btn primary-link project-link mb-5">View my projects</a>
+            <a href="work.html" class="btn primary-link project-link mb-5" title="View my projects">View my projects</a>
           </div>
         </div>
         <div class="col-lg-6">
-          <img src="images/AneeshaR.jpg" alt="Aneesha profile image" class="portfolio-image img-fluid">
+          <img src="images/AneeshaR.jpg" alt="Aneesha profile image" class="portfolio-image img-fluid" title="Aneesha Profile Picture">
         </div>
       </div>
     </div>
@@ -86,23 +86,25 @@
           <p class="text-muted">Lets work together</p>
         </div>
         <div>
-          <a href="contact.html" class="btn primary-link"> Contact me</a>
+          <a href="contact.html" class="btn primary-link" title="Contact me"> Contact me</a>
         </div>
       </div>
       <div class="d-flex justify-content-center mb-5"> 
         <a href="mailto:aneeshrangan51@gmail.com" class="email-link">aneeshrangan51@gmail.com</a>
       </div>
-      <div class="social-links d-flex justify-content-center">
-        <a href="https://github.com/Aneesha51" target="_blank"><i class="fa-brands fa-github fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true">
+      <div class="social-links d-flex justify-content-center mb-5">
+        <a href="https://github.com/Aneesha51" target="_blank"><i class="fa-brands fa-github fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true" title="Github Link">
       </i>
     </a>
-    <a href="https://www.instagram.com/aneesharangan" target="_blank"><i class="fa-brands fa-instagram fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true">
+    <a href="https://www.instagram.com/aneesharangan" target="_blank"><i class="fa-brands fa-instagram fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true" title="Instagram Link">
     </i>
   </a>
-  <a href="https://www.twitter.com/AneeshaRangan" target="_blank"><i class="fa-brands fa-twitter fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true">
+  <a href="https://www.twitter.com/AneeshaRangan" target="_blank"><i class="fa-brands fa-twitter fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true" title="Twitter Link">
   </i>
   </a>
       </div>
+      <p class="text-center mt-5">This website was coded by Aneesha Rangan, and is <a href="https://github.com/Aneesha51/Portfolio-project" target="_blank">open-sourced.</a>
+      </p>
     </footer>
 </body>
 </html>
