--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Aneesha is a front-end engineer based in South Africa, Gauteng">
    
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -33,28 +34,28 @@
     <link rel="stylesheet" href="src/styles.css" />
   
  
-    <title>Document</title>
+    <title>Front-end developer - Aneesha Rangan</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light navbar-fixed-top d-flex">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#" title="Aneesha Rangan"><img src="images/Aneesha.png" alt="logo" class="logo img-fluid me-3">Aneesha Rangan</a>
+        <a class="navbar-brand" href="#" title="Aneesha Rangan"><img src="images/Aneesha.png" alt="Aneesha logo" class="logo img-fluid me-3">Aneesha Rangan</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
           <ul class="navbar-nav text-end">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html" title="Home">Home</a>
+              <a class="nav-link active" aria-current="page" href="index.html" title="Homepage">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html" title="About">About</a>
+              <a class="nav-link" href="about.html" title="About Aneesha">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html" title="Work">Work</a>
+              <a class="nav-link" href="work.html" title="Aneesha's Work">Work</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html" title="Contact">Contact</a>
+              <a class="nav-link" href="contact.html" title="Contact Aneesha">Contact</a>
             </li>
            
           </ul>
@@ -69,7 +70,7 @@
           <h2>Hi There,</h2>
           <h1>I'm Aneesha <span>Rangan</span></h1>
           <p class="hero-paragraph mb-5">Front-end developer based in Gauteng, South Africa</p>
-          <a href="about.html" class="btn primary-link">About Me</a>
+          <a href="about.html" class="btn primary-link" title="About Aneesha">About Me</a>
           <hr>
         </div>
 
@@ -118,23 +119,25 @@
         <p class="text-muted">Lets work together</p>
       </div>
       <div>
-        <a href="contact.html" class="btn primary-link"> Contact me</a>
+        <a href="contact.html" class="btn primary-link" title="Contact Aneesha"> Contact me</a>
       </div>
     </div>
     <div class="d-flex justify-content-center mb-5"> 
       <a href="mailto:aneeshrangan51@gmail.com" class="email-link">aneeshrangan51@gmail.com</a>
     </div>
-    <div class="social-links d-flex justify-content-center">
-      <a href="https://github.com/Aneesha51" target="_blank"><i class="fa-brands fa-github fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true">
+    <div class="social-links d-flex justify-content-center mb-5">
+      <a href="https://github.com/Aneesha51" target="_blank"><i class="fa-brands fa-github fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true" title="GitHub Link">
     </i>
   </a>
-  <a href="https://www.instagram.com/aneesharangan" target="_blank"><i class="fa-brands fa-instagram fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true">
+  <a href="https://www.instagram.com/aneesharangan" target="_blank"><i class="fa-brands fa-instagram fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true" title="Instagram Link">
   </i>
 </a>
-<a href="https://www.twitter.com/AneeshaRangan" target="_blank"><i class="fa-brands fa-twitter fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true">
+<a href="https://www.twitter.com/AneeshaRangan" target="_blank"><i class="fa-brands fa-twitter fa-beat-fade" style="color: #8dc6ff;" aria-hidden="true" title="Twitter Link">
 </i>
 </a>
     </div>
+    <p class="text-center mt-5">This website was coded by Aneesha Rangan, and is <a href="https://github.com/Aneesha51/Portfolio-project" target="_blank">open-sourced.</a>
+    </p>
   </footer>
   
 
